--- a/Resources/Public/Css/belogin_images.css
+++ b/Resources/Public/Css/belogin_images.css
@@ -19,10 +19,10 @@
     background-size: cover;
 }
 .card, .panel {
-    background-color: #ffffffb8;
-    transition: background-color 300ms linear;
+    opacity: .7;
+    transition: opacity 300ms linear;
 }
-.card:hover, .panel:hover {background-color: #fff}
+.card:hover, .panel:hover {opacity: 1}
 @keyframes fadein{
     0% { opacity:0; }
     100% { opacity:1; }
